FM-10
Действия дежурного на аварии (ack, comment, assign, silence)
