# backend/fm-module/src/main/java/ru/wisla/fm/processing/api/EventActionRequest.java
@@ -2,8 +2,12 @@ package ru.wisla.fm.processing.api;
 
 import jakarta.validation.constraints.NotBlank;
 
+import java.util.UUID;
+
 public record EventActionRequest(
         @NotBlank String action,
-        String comment
+        String comment,
+        UUID assignedUserId,
+        Integer silenceMinutes
 ) {
 }
